<resources>
    <string name="appName">Hospital Management</string>

    <!--Slide Activity-->
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="start">Get Started</string>

    <!--all title of slide view-->
    <string-array name="Heads">
        <item>Doctors</item>
        <item>Drugs</item>
        <item>HealthCare</item>
        <item>Community</item>
    </string-array>

    <!--all description of titles in slide view-->
    <string-array name="Descriptions">
        <item>You can book a doctor and know his appointments at any time</item>
        <item>You can order a drug or show availability of drug in hospital pharmacy</item>
        <item>Elderly people and people with chronic diseases can participate in a private medical care service


        </item>
        <item>You can benefit from many tips here</item>
    </string-array>
    <string name="services">Services</string>

    <!--Login Activity-->
    <string name="welcome">Welcome To Ekshifly</string>
    <string name="chooseJob">Job</string>
    <string-array name="Jobs">
        <item>Patient</item>
        <item>Hospital</item>
        <item>Doctor</item>
        <item>Admin</item>
    </string-array>
    <string name="jobError">Please enter your job</string>
    <string name="Email">Email</string>
    <string name="gmail">@gmail.com</string>
    <string name="emailError">Please enter your email</string>
    <string name="Password">Password</string>
    <string name="passwordError">Please enter your password</string>
    <string name="rememberMe">Remember Me</string>
    <string name="forgetPassword">Do you forget your password?</string>
    <string name="failReset">Reset password is failed</string>
    <string name="login">Login</string>
    <string name="noAccount">Do not have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="background">Background</string>

    <!--Choose Activity-->
    <string name="question">Do you want to create an account in the application as a hospital or a patient?</string>
    <string name="hospital">Hospital</string>
    <string name="patient">Patient</string>

    <!--Registration Activity-->
    <string name="profile">Choose photo</string>
    <string name="name">Name</string>
    <string name="nameError">Please enter your name</string>
    <string name="telephone">Telephone</string>
    <string name="telephoneError">Please enter your telephone</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="confirmPasswordError">Please Confirm Password</string>
    <string name="notEqualPassword">Two password not equal</string>
    <string name="gender">Gender</string>
    <string name="time">Time</string>
    <string name="genderError">Please choose your gender</string>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <!--Registration Hospital Activity-->
    <string name="Location">Location</string>
    <string-array name="Locations">
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>Giza</item>
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Beheira</item>
        <item>Beni Suef</item>
        <item>Dakahlia</item>
        <item>Damietta</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Ismailia</item>
        <item>Kafr El Sheikh</item>
        <item>Luxor</item>
        <item>Matruh</item>
        <item>Minya</item>
        <item>Monufia</item>
        <item>New Valley</item>
        <item>North Sinai</item>
        <item>Port Said</item>
        <item>Qalyubia</item>
        <item>Qena</item>
        <item>Red Sea</item>
        <item>Sharqia</item>
        <item>Sohag</item>
        <item>South Sinai</item>
        <item>Suez</item>
    </string-array>
    <string name="hospital_name">Hospital name</string>
    <string name="Manager_Name">Manager name</string>
    <string name="finish">Finish</string>


    <!--Common Registration-->
    <string name="phone">Phone</string>
    <string name="code">+2</string>
    <string name="verify">Verify</string>
    <string name="questionChangePhone">Phone number is</string>
    <string name="questionTag">"?"</string>
    <string name="questionChangeEmail">Email is</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="emailErrorVerification">Click Verify button again</string>
    <string name="checkEmail">Check your email now</string>
    <string name="failSignIn">SignIn is failed</string>


    <!--Common Verification-->
    <string name="verification">Verification Code</string>
    <string name="enterCode">Enter Verification code</string>
    <string name="enterCode1">Open the email and check the message, then come back here and click Verify</string>
    <string name="resend">Resend</string>

    <!--Home patient-->
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="favorite">Favorite Tips</string>
    <string name="settings">Settings</string>
    <string name="signOut">Sign out</string>
    <string name="pay">Pay</string>
    <string name="seenMessage">Seen of message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="covid">Covid19</string>
    <string name="detect">Detect</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="viralPhenomena">Viral Phenomena</string>
    <string name="createPost">Create post</string>
    <string name="publish">Publish</string>
    <string name="advice">What advice do you want to give?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="choose">Choose photo or video</string>
    <string name="publishSuccess">Post published successfully</string>
    <string name="publishFailure">Post failed to publish</string>
    <string name="photo">Photo</string>
    <string name="loadingNow">Loading...</string>
    <string name="date">Date</string>
    <string name="ok">OK</string>
    <string name="verifyPhone">Enter the phone number, then click the Verify button</string>
    <string name="phoneError">Please enter your phone</string>
    <string name="successSignUp">Sign up successfully</string>
    <string name="resendQuestion">Didn\'t receive the OTP?</string>
    <string name="verificationOTP">OTP Verification</string>
    <string name="signOutQuestion">Do you want to sign out?</string>
    <string name="like">Like</string>
    <string name="disLike">Dislike</string>
    <string name="star">Star</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="writeMessage">Write Message</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="timeNow">Write Now</string>
    <string name="times">Times</string>
    <string name="healthChatting_question">"please determine number of notification you need : "</string>
    <string name="notifyNumber">enter number of from 5 to 10</string>
    <string name="setTime">Set Time 1</string>
    <string name="health_question">which type of health you need ?</string>
    <string name="create">Create</string>
    <string name="Edit">Edit</string>
    <string name="FriendNumber">Enter the number of your friend</string>
    <string name="Healthnotify">this is time of your healthcare : </string>

    <string name="Q1">Are you take medicine in its time today ? </string>
    <string name="ans1Q1">Yes,i take it in the exact time</string>
    <string name="ans2Q1">No , i take it but in latter time</string>

    <string name="Q2">Do you feel dizzy today?</string>
    <string name="ans1Q2">I really feel dizzy</string>
    <string name="ans2Q2">No I\'m fine</string>

    <string name="Q3">Did you run out a specific drug you want to buy?</string>
    <string name="ans1Q3">Indeed, I have a drug that has already run out</string>
    <string name="ans2Q3">No medication has been taken</string>

    <string name="Q4">Do you have the result of the corona virus analysis and would like to check the result?</string>
    <string name="ans1Q4">Yes, I already have a new x-ray</string>
    <string name="ans2Q4">No, I did not have any new x-rays</string>
    <string name="scann">Scann</string>
    <string name="serbyname">Search By Name</string>
    <string name="seardiese">Search By Disease</string>
    <string name="serparcod">Search By Barcode</string>
    <string name="searphoto">Search By Photo</string>
    <string name="title_activity_admin_board">AdminBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Doctor">Doctor</string>
    <string name="Drugs">Drugs</string>
    <string name="Admin">Admin</string>
    <string name="nameOfDrug">Enter name of drug</string>
    <string name="nameOfDisease">Enter name of disease</string>
    <string name="noPermissionCall">"Deny Call Permession "</string>
    <string name="more">more</string>
    <string name="callFriend">call friend</string>
    <string name="bookDoctor">Book Doctor</string>
    <string name="doctorBooked">Doctor booked</string>
    <string name="covidDetect">Covid19 Detection</string>
    <string name="history">History Of Patient</string>
    <string name="accept">Accept</string>
</resources>
