<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_chat"
            android:title="@string/chats" />
        <item
            android:id="@+id/nav_favorite_tips"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_book_doctor"
            android:title="@string/bookDoctor" />

        <item
            android:id="@+id/nav_detect_covid19"
            android:title="@string/covidDetect" />

        <item
            android:id="@+id/nav_History"
            android:title="@string/history" />
    </group>

</menu>