<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.yom.hospitalmanagementyom.fragments.patient.HomePatientFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home_patient" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.yom.hospitalmanagementyom.fragments.patient.ChatFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_favorite_tips"
        android:name="com.yom.hospitalmanagementyom.fragments.patient.FavoriteTipsFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite_tips" />

    <fragment
        android:id="@+id/nav_book_doctor"
        android:name="com.yom.hospitalmanagementyom.fragments.patient.BookDoctorFragment"
        android:label="@string/bookDoctor"
        tools:layout="@layout/fragment_book_doctor" />
    <fragment
        android:id="@+id/nav_detect_covid19"
        android:name="com.yom.hospitalmanagementyom.fragments.hospital.Covid19Fragment"
        android:label="@string/covidDetect"
        tools:layout="@layout/fragment_covid19" />

    <fragment
        android:id="@+id/nav_History"
        android:name="com.yom.hospitalmanagementyom.fragments.doctor.HistoryPatientFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history_patient" />

</navigation>