<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.yom.hospitalmanagementyom.fragments.hospital.DoctorFragment"
        android:label="@string/Doctor"
        tools:layout="@layout/fragment_doctor" />

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.yom.hospitalmanagementyom.fragments.hospital.AdminFragment"
        android:label="@string/Admin"
        tools:layout="@layout/fragment_admin" />

    <fragment
        android:id="@+id/nav_drugs"
        android:name="com.yom.hospitalmanagementyom.fragments.hospital.DrugsFragment"
        android:label="@string/Drugs"
        tools:layout="@layout/fragment_drugs" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.yom.hospitalmanagementyom.fragments.patient.ChatFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_chat" />
</navigation>