<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.registration.LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_image"
        android:contentDescription="@string/background"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:hint="@string/chooseJob"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/error"
        app:startIconDrawable="@drawable/list"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/job"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:hint="@string/Email"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:suffixText="@string/gmail"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/error"
        app:startIconDrawable="@drawable/email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorControlNormal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:hint="@string/Password"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/error"
        app:startIconDrawable="@drawable/lock">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="?attr/colorControlNormal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgetPassword"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/_16ssp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:text="@string/login"
        android:textSize="@dimen/_20ssp" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:backgroundTint="@color/signUp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/signUp"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/white"/>

</LinearLayout>
