<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.registration.CommonRegistrationActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_image"
        android:contentDescription="@string/background"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:hint="@string/phone"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:prefixText="@string/code"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/error"
        app:startIconDrawable="@drawable/phone">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:textColor="?attr/colorControlNormal" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/Verify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:text="@string/verify"
        android:textSize="@dimen/_15ssp" />

</LinearLayout>