<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.doctor.CreatePostFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            app:title="@string/createPost"
            app:titleTextColor="@color/teal_700" >
            <Button
                android:id="@+id/publish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/publish"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_10sdp"
                android:enabled="false"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePostForDoctor"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_alignParentStart="true"
        android:src="@color/teal_700"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_below="@+id/appBar"/>

    <TextView
        android:id="@+id/namePostForDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/profilePostForDoctor"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_toEndOf="@+id/profilePostForDoctor"
        android:maxLines="1"
        tools:text="Yousef Shaaban"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:id="@+id/timePostForDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namePostForDoctor"
        android:layout_alignStart="@+id/namePostForDoctor"
        android:layout_marginStart="@dimen/_5sdp"
        tools:text="5:57 AM"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <EditText
        android:id="@+id/caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profilePostForDoctor"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/advice"
        android:minHeight="@dimen/_40sdp"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/teal_700"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/photoPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/photo"
        android:layout_below="@id/caption"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"/>

    <VideoView
        android:id="@+id/videoPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/photo"
        android:layout_below="@id/caption"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/teal_700"
            android:src="@drawable/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/choose"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            app:backgroundTint="@color/teal_700"
            android:src="@drawable/camera"
            app:layout_constraintBottom_toTopOf="@+id/edit"
            app:layout_constraintEnd_toEndOf="@+id/edit"
            android:visibility="gone"
            android:contentDescription="@string/camera"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            app:backgroundTint="@color/teal_700"
            android:src="@drawable/gallery"
            app:layout_constraintBottom_toTopOf="@+id/camera"
            app:layout_constraintEnd_toEndOf="@+id/camera"
            android:visibility="gone"
            android:contentDescription="@string/gallery"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/gallery"
            app:layout_constraintEnd_toEndOf="@+id/gallery"
            app:backgroundTint="@color/teal_700"
            android:src="@drawable/slideshow"
            android:visibility="gone"
            android:contentDescription="@string/video"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>